/ create logic ahadeth / create hadeth details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".QuranDetails"
             android:exported="false" />
         <activity
+            android:name=".HadethDetails"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
